fix syntax error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
         - run:
             name: install lint
             command: |
-                wget https://github.com/htacg/tidy-html5/releases/download/5.4.0/tidy-5.4.0-64bit.rpm
+                wget -O https://github.com/htacg/tidy-html5/releases/download/5.4.0/tidy-5.4.0-64bit.rpm
                 yum install tidy-5.4.0-64bit.rpm
             
         - run:
@@ -39,4 +39,5 @@ workflows:
     jobs:
       - lint-html
       - lint-docker
+          requires: [lint-html]
       #- build-push-docker-image
