fix syntax error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
         - run:
             name: install lint
             command: |
-                wget -O https://github.com/htacg/tidy-html5/releases/download/5.4.0/tidy-5.4.0-64bit.rpm
+                wget https://github.com/htacg/tidy-html5/releases/download/5.4.0/tidy-5.4.0-64bit.rpm 
                 yum install tidy-5.4.0-64bit.rpm
             
         - run:
