--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,10 +28,42 @@ jobs:
             command: |
                     pwd
                     make lint    
+                    
+    build-push-docker-image:
+      docker:
+        - image: circleci/golang:1.15
+          auth:
+            username: $DOCKERHUB_USER
+            password: $DOCKERHUB_PWD  # context / project UI env-var reference
+      steps:
+        - checkout
+        - setup_remote_docker:
+            version: 19.03.13
+        - run:
+            name: build and push docker image
+            command: |
+                echo "Docker username = $DOCKERHUB_USER"
+                
+                # Build image and add a descriptive tag
+                docker build --tag=capstone-project-demowebsite .
+                
+                # List docker images
+                docker image ls
+                
+                # Run our static website
+                #docker run -it --rm -d -p 8080:80 --name web capstone-project-demowebsite
+    
+                #dockerpath=shikhas/capstone-project-demowebsite
+
+                docker tag capstone-project-demowebsite shikhas/capstone-project-demowebsite
+                docker push shikhas/capstone-project-demowebsite
+    
+    
 workflows:
   default:
     jobs:
       - lint-html
       - lint-docker:
           requires: [lint-html]
-      #- build-push-docker-image
+      - build-push-docker-image
+          requires: [lint-docker]
