--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -65,5 +65,5 @@ workflows:
       - lint-html
       - lint-docker:
           requires: [lint-html]
-      - build-push-docker-image
+      - build-push-docker-image:
           requires: [lint-docker]
