--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
                 #dockerpath=shikhas/capstone-project-demowebsite
                 
                 #Login to docker hub
-                docker login --username $DOCKERHUB_USER
+                docker login --username $DOCKERHUB_USER --password $DOCKERHUB_PWD
 
                 docker tag capstone-project-demowebsite shikhas/capstone-project-demowebsite
                 docker push shikhas/capstone-project-demowebsite
